[package]
name = "shiba-cli"
version = "0.1.0"
authors = ["Jonathan Giroux <giroux.jo@gmail.com>"]
edition = "2018"
description = "Tool"

[dependencies]
byteorder = "1.3"
dirs = "2.0"
encoding = "0.2"
lazy_static = "1.4"
nom = "5.0"
notify = "4.0"
ordered-float = { version = "1.0", features = ["serde"] }
regex = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
structopt = "0.3"
tera = "0.11"
